# rapidreboot

./: CMakeLists.txt  LICENSE  README.md  kexec-load  rapidreboot.desktop  rapidreboot.sh  rapidreboot_indicator.py
